--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -444,3 +444,12 @@ $justifyContent-terciario: flex-end;
   display: inline-block;
   cursor: pointer;
 }
+
+/* Mensaje de error - botón ok */
+
+div:where(.swal2-container) div:where(.swal2-popup) {
+  display: none;
+  position: relative;
+  box-sizing: border-box;
+  grid-template-columns: minmax(0, 100%);
+}
