--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -874,3 +874,26 @@ input[type="checkbox"]:checked {
     padding: 0;
   }
 }
+
+/* Mensaje de error - botón ok */
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+  border: 0;
+  border-radius: 10px;
+  background: initial;
+  width: 150px;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled) {
+  margin: 0.315px;
+  padding: 8px;
+}
+
+div:where(.swal2-container) div:where(.swal2-popup) {
+  width: 27em;
+  height: auto;
+  max-width: 100%;
+  padding: 0 0 2rem;
+  border: none;
+  border-radius: 10px;
+}
