--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -22,7 +22,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 34px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 28px;
   }
 }
@@ -34,7 +34,7 @@ body {
     font-weight: 900;
     font-size: 27px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 22px;
   }
 }
@@ -45,7 +45,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 17px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -59,7 +59,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 24px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 19px;
   }
 }
@@ -71,7 +71,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 18px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -82,7 +82,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -93,13 +93,13 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 20px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 17px;
   }
 }
 
 .titulo-servicios {
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 19px;
   }
 }
@@ -110,7 +110,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 20px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 18px;
   }
 }
@@ -120,7 +120,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 17px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -130,7 +130,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 18px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -145,7 +145,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 22px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 19px;
   }
 }
@@ -156,7 +156,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 16px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -166,7 +166,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 30px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 22px;
   }
 }
@@ -176,7 +176,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 14px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 12px;
   }
 }
@@ -189,7 +189,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 24px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 19px;
   }
 }
@@ -199,7 +199,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 17px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -219,7 +219,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 16px;
   }
 }
@@ -239,7 +239,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 14px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 13px;
   }
 }
@@ -252,7 +252,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 24px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 19px;
   }
 }
@@ -262,7 +262,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 17px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -273,7 +273,7 @@ body {
 .palabra_invitados {
   font-family: "Kalam", cursive;
   font-size: 16px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -284,7 +284,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 20px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 19px;
   }
 }
@@ -295,7 +295,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 16px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -306,7 +306,7 @@ body {
 
 .servicios_salon {
   font-size: 16px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -334,7 +334,7 @@ body {
 .btn-volver {
   font-family: "Kalam", cursive;
   font-size: 15px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 13px;
   }
 }
@@ -342,7 +342,7 @@ body {
 .boton_cotizar {
   font-family: "Kalam", cursive;
   font-size: 15px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 13px;
   }
 }
@@ -350,7 +350,7 @@ body {
 .boton_reservar {
   font-family: "Kalam", cursive;
   font-size: 15px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 13px;
   }
 }
@@ -358,7 +358,7 @@ body {
 .result {
   font-family: "Kalam", cursive;
   font-size: 18px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 16px;
   }
 }
@@ -366,7 +366,7 @@ body {
 .result_reserva {
   font-family: "Kalam", cursive;
   font-size: 18px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 16px;
   }
 }
@@ -374,14 +374,14 @@ body {
 .texto_reserva {
   font-family: "Kalam", cursive;
   font-size: 20px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 17px;
   }
 }
 
 .formulario__input-error__tres {
   font-size: 13px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
   }
 }
 
@@ -393,7 +393,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 24px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 19px;
   }
 }
@@ -405,7 +405,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 16px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -416,7 +416,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -427,7 +427,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -447,7 +447,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 14px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     font-size: 13px;
   }
 }
