--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -5,7 +5,7 @@
   @media screen and (max-width: 767px) {
     padding: 0.313rem 0.625rem 0.313rem 0.625rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     height: 70px;
     padding: 0.313rem 0.625rem 0.313rem 0.625rem;
   }
@@ -29,7 +29,7 @@
     padding-right: 4rem !important;
     padding-left: 4rem !important;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-left: 5px;
     margin-right: 5px;
     padding-right: 2rem !important;
@@ -58,7 +58,7 @@
   @media screen and (max-width: 767px) {
     margin: 0.125rem 0 0.125rem 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 2px;
   }
 }
@@ -70,7 +70,7 @@
     padding: 40px 30px;
   }
 
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 20px 0;
   }
 }
@@ -84,7 +84,7 @@
 
 .parrafo-tiare {
   margin-bottom: 15px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding-right: 5px;
     padding-left: 0;
   }
@@ -102,7 +102,7 @@
     justify-content: center;
     align-items: center;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     max-width: 83%;
     margin-left: 34px;
   }
@@ -113,7 +113,7 @@
   @media screen and (max-width: 767px) {
     margin: 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 20px 34px 10px 34px;
   }
 }
@@ -129,7 +129,7 @@
     width: 130px;
     padding: 12px 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     height: 40px;
     width: 120px;
     margin-bottom: 0;
@@ -143,7 +143,7 @@
   @media screen and (max-width: 767px) {
     padding: 10px 0 40px 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding-bottom: 25px;
   }
 }
@@ -153,7 +153,7 @@
   @media screen and (max-width: 767px) {
     padding-top: 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-bottom: 0;
     padding-bottom: 5px;
   }
@@ -166,7 +166,7 @@
     padding-right: 20px;
     margin-bottom: 5px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 0 34px 5px 34px;
   }
 }
@@ -182,7 +182,7 @@
     width: 322px;
     padding: 9px 20px 5px 20px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 312px;
     padding: 6px 20px 4px 20px;
   }
@@ -224,7 +224,7 @@
     margin-bottom: 0;
     width: 49%;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 53%;
   }
 }
@@ -244,7 +244,7 @@
     padding-right: 25%;
     padding-bottom: 10px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-top: 10px;
     padding-left: 23%;
     padding-right: 23%;
@@ -254,7 +254,7 @@
 
 .titulo-empresa {
   padding-top: 20px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-bottom: 10px;
     padding-top: 10px;
   }
@@ -268,7 +268,7 @@
 }
 
 .textos-nuestra-empresa {
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 10px 0 10px 0;
   }
 }
@@ -296,7 +296,7 @@
     justify-content: center;
     align-items: center;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     max-width: 100%;
     margin-bottom: 20px;
   }
@@ -313,7 +313,7 @@
   @media screen and (max-width: 767px) {
     padding: 45px 20px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     height: 340px;
     padding: 35px 10px 20px 10px;
   }
@@ -324,7 +324,7 @@
   @media screen and (max-width: 767px) {
     margin-bottom: 1.875rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 0.625rem 0 0.313rem 0.625rem;
   }
 }
@@ -339,7 +339,7 @@
     margin-left: 40px;
     margin-right: 40px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-left: 20px;
     margin-right: 20px;
   }
@@ -350,7 +350,7 @@
   @media screen and (max-width: 767px) {
     margin-left: 42%;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-left: 48%;
   }
 }
@@ -361,7 +361,7 @@
   @media screen and (max-width: 767px) {
     margin-bottom: 10px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-top: 25px;
   }
 }
@@ -373,7 +373,7 @@
   @media screen and (max-width: 767px) {
     padding: 4.375rem 1.25rem 4.375rem 1.25rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
@@ -393,7 +393,7 @@
 
 .titulo_contactanos {
   padding: 1.25rem 0 0.625rem 0;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 0.625rem 0 0.625rem 0;
   }
 }
@@ -436,7 +436,7 @@ input[type="checkbox"]:checked {
 
 .btn__dos {
   padding: 0.625rem 0.625rem 1.25rem 0;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 10px 10px 20px 0;
   }
 }
@@ -447,7 +447,7 @@ input[type="checkbox"]:checked {
   padding: 0.313rem;
   margin: 0 1.25rem 0 1.25rem;
   border-radius: 10px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     height: 45px;
     width: 98%;
     padding: 0;
@@ -461,7 +461,7 @@ input[type="checkbox"]:checked {
   margin: 0 1.25rem 0 1.25rem;
   padding: 0.313rem;
   border-radius: 10px;
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 0 20px 0 20px;
     width: 95%;
     padding: 5px 3px;
@@ -475,7 +475,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 4.375rem 1.875rem 4.375rem 1.875rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
@@ -486,7 +486,7 @@ input[type="checkbox"]:checked {
   padding: 1.25rem 0.625rem 1.25rem 0.625rem;
   border-radius: 10px;
 
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 100%;
   }
 }
@@ -498,7 +498,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 1.25rem 1.25rem 0 1.25rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 1.25rem 1.563rem 0 1.563rem;
   }
 }
@@ -508,7 +508,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 0 35px 5px 35px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 0 20px 0 20px;
   }
 }
@@ -523,7 +523,7 @@ input[type="checkbox"]:checked {
     margin-right: 0;
     padding: 0 12px 10px 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 0;
     padding: 0 12px 10px 0;
   }
@@ -534,7 +534,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 0.375rem 0 1.25rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 15px 5px 5px 12px;
   }
 }
@@ -545,7 +545,7 @@ input[type="checkbox"]:checked {
     margin-right: 0;
     margin-bottom: 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-right: 0;
   }
 }
@@ -555,7 +555,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 0.313rem 1.25rem 0.625rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 0 5px 10px 12px;
   }
 }
@@ -568,7 +568,7 @@ input[type="checkbox"]:checked {
     margin-right: 0.92rem;
     margin-left: 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 1.25rem 0.92rem 0.313rem 0;
   }
 }
@@ -585,7 +585,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     width: 132px;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 132px;
   }
 }
@@ -596,7 +596,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding-top: 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding-bottom: 0.625rem;
     padding-top: 0;
   }
@@ -608,7 +608,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.625rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-left: 0.625rem;
   }
 }
@@ -618,7 +618,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.563rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-left: 0.563rem;
   }
 }
@@ -628,7 +628,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.5rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin-left: 0.5rem;
     margin-bottom: 5px;
   }
@@ -644,7 +644,7 @@ input[type="checkbox"]:checked {
     width: 141px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 138px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -660,7 +660,7 @@ input[type="checkbox"]:checked {
     width: 122px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 122px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -676,7 +676,7 @@ input[type="checkbox"]:checked {
     width: 106px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 106px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -688,7 +688,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 0.625rem 0 0.625rem 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 0 20px;
   }
 }
@@ -701,7 +701,7 @@ input[type="checkbox"]:checked {
     width: 90px;
     margin: 0 0.625rem 0.625rem 0.625rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 100%;
     margin: 0 0 10px 0;
   }
@@ -716,7 +716,7 @@ input[type="checkbox"]:checked {
     width: 90px;
     margin: 0 0.625rem 0.625rem 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 100%;
     margin: 0 0.625rem 0.625rem 0;
   }
@@ -732,7 +732,7 @@ input[type="checkbox"]:checked {
     margin-left: 0.5rem;
     margin-bottom: 0.625rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 100%;
     height: 43px;
     margin-left: 0;
@@ -745,7 +745,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0.625rem 0 0.625rem 1.563rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 0.625rem 0 0.625rem 1.188rem;
   }
 }
@@ -757,7 +757,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0.625rem 0.638rem 0.625rem 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 0.625rem 0.938rem 0.625rem 0;
   }
 }
@@ -767,7 +767,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 1.25rem 1.938rem 1.25rem 1.563rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     margin: 1.25rem 0.125rem 1.25rem 0.125rem;
   }
 }
@@ -781,7 +781,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 4.375rem 1.25rem 4.375rem 1.25rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
@@ -797,7 +797,7 @@ input[type="checkbox"]:checked {
     width: 95%;
     padding: 1.25rem 1.875rem 1.25rem 1.875rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     width: 100%;
   }
 }
@@ -836,7 +836,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 1.875rem 0.438rem 1.25rem 0;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     padding: 1.875rem 0 0.625rem 0;
   }
 }
@@ -850,7 +850,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 1.063rem 0 1.063rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     height: 40px;
     width: 100%;
     margin: 0;
@@ -867,7 +867,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 1.063rem 0 1.125rem;
   }
-  @media screen and (min-width: 380px) and (max-width: 450px) {
+  @media screen and (max-width: 450px) {
     height: 40px;
     width: 100%;
     margin: 0 0 0.625rem 0;
